fixing still far behind

--- a/website/src/Style.css
+++ b/website/src/Style.css
@@ -5,7 +5,7 @@
   --fourth-color: #91AEC4;
   --fifth-color: #5f84a2;
   --sixth-color: #194569;
-  --off-color: #5e341b;
+  --off-color: #6d4229;
 }
 
 /**
@@ -26,7 +26,8 @@
   display: flex;
   box-shadow: 0 30px 30px var(--primary-color);
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 33%;
   background: linear-gradient(to bottom, var(--third-color), var(--primary-color));
   position: relative;
   overflow-y: auto;
@@ -42,19 +43,14 @@
   width: 20rem;
 }
 
-#Header-Home,
-#Header-About,
-#Header-Contact {
-  display: flex;
-  flex-direction: column;
-  height: 4rem;
-}
-
 #Header-Home-Link,
 #Header-About-Link,
 #Header-Contact-Link {
   text-decoration: none;
   color: var(--sixth-color);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   font-size: 24px;
 }
 
